log
Thu 24 Aug 2023 08:16:11 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: statement with no effect [-Werror=unused-value]
   33 |   list->head;
      |   ~~~~^~~~~~
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size=0;
      |       ^~
list.c: In function ‘prevList’:
list.c:52:13: error: expected expression before ‘)’ token
   52 |   if(list ==)
      |             ^
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
93ff3c6
Thu 24 Aug 2023 08:23:30 PM UTC: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:53:13: error: expected expression before ‘)’ token
   53 |   if(list ==)
      |             ^
list.c: In function ‘pushFront’:
list.c:65:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   65 |   list->size++;
      |       ^~
list.c: In function ‘prevList’:
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1f6790e
Thu 24 Aug 2023 08:23:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:53:13: error: expected expression before ‘)’ token
   53 |   if(list ==)
      |             ^
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f4e9989
Thu 24 Aug 2023 08:24:15 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
4136fb5
Thu 24 Aug 2023 08:29:25 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
0a7ce5a
Thu 24 Aug 2023 08:44:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7f2707f
Thu 24 Aug 2023 08:44:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
eff0f8f
Thu 24 Aug 2023 08:48:30 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:47:23: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   47 |   list->current = list->next;
      |                       ^~
Compilation failed
a4b0042
Thu 24 Aug 2023 08:49:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
5afd6a2
Thu 24 Aug 2023 08:49:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
32b1841
